# Kafra-Patcher

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  build_log.txt
.github/workflows/: rust.yml
.jules/: bolt.md
docker/: README.md
docs/: MKPATCH_USAGE.md
examples/: kpatcher.yml  rpatchur.yml
examples/basic_launcher/: index.html
examples/bootstrap/: estilo.css  index copy.html  index.html  script.js
gruf/src/: archive.rs
gruf/src/grf/: builder.rs  dyn_alloc.rs  reader.rs
gruf/src/grf/crypto/: mod.rs
gruf/src/thor/: builder.rs  reader.rs
kpatcher/: Cargo.toml  build.rs
kpatcher/resources/: kpatcher.rc
kpatcher/src/: main.rs  process.rs  ui.rs
kpatcher/src/patcher/: cache.rs  cancellation.rs  config.rs  core.rs  mod.rs  patching.rs
mkpatch/: Cargo.toml  build.rs
mkpatch/resources/: mkpatch.rc
mkpatch/src/: embed.rs  generator.rs  main.rs  ui.rs
mkpatch/src/assets/: index.html
rpatchur/: Cargo.toml  build.rs
rpatchur/resources/: rpatchur.rc
rpatchur/src/: main.rs  ui.rs
rpatchur/src/patcher/: config.rs  core.rs  patching.rs
