[package]
name = "kpatcher"
version = "1.0.0"
authors = ["LinkZ <wanthost@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Kafra Patcher - A customizable patcher for Ragnarok Online"

[package.metadata.winres]
FileDescription = "Kafra Patcher - A customizable patcher for Ragnarok Online"
ProductName = "Kafra Patcher"
ProductVersion = "1.0.0"
LegalCopyright = "Copyright © 2020-2026 Kafra Patcher developers"


[dependencies]
gruf = { version = "0.2", path = "../gruf" }

open = "1.7.0"
wry = "0.24"
tao = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
futures = "0.3"
tokio = { version = "1.21", features = ["macros", "fs", "sync", "io-util"] }
reqwest = { version = "0.11", features = ["stream"] }
url = "2.2"
tempfile = "3.1"
log = { version = "0.4", features = ["release_max_level_off"] }
simple_logger = "1.11"
anyhow = "1.0"
serde_json = "1.0"
flume = "0.10"
tinyfiledialogs = "3.3"
structopt = "0.3"
scopeguard = "1.1"
advisory-lock = "0.3"
flate2 = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [
    "shellapi",
    "winuser",
    "wingdi",
    "dwmapi",
] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
twox-hash = "1.5"
walkdir = "2.3"
httptest = "0.13"
